src/assets/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

svg {
  width: 1.25rem;
  height: 1.25rem;
  fill: white;
}
/* #242729 */
body {
  background-color: #393e41;
  height: 100vh;
  display: grid;
  grid-template-columns: 0.9fr 4fr;
  grid-template-rows: 0.1fr 0.3fr 1fr;
  overflow: hidden;
}

header {
  background-color: #307e7e;
  grid-column: 1 / -1;
  display: flex;
  align-items: center;
  padding-left: 1.5rem;
  font-size: 1.5rem;
  font-weight: 600;
}

/****************** SIDEBAR ******************/
#sidebar {
  background-color: #242729;
  grid-column: 1;
  grid-row: 2 / -1;
  display: flex;
  flex-direction: column;
  gap: 5rem;
  padding: 1rem;
}

#menu {
  display: flex;
  flex-direction: column;
}

#menu .menu-item,
#projects .project-item {
  padding: 0.35rem 0.5rem;
}

#menu .menu-link,
#projects .project-link {
  font-size: 1rem;
}

#menu .menu-item:hover,
#projects .project-item:hover {
  background-color: #474d50;
  border-radius: 4px;
  cursor: pointer;
}

#menu .menu-link,
#projects .project-link {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

#projects #project-bar {
  display: flex;
  justify-content: space-between;
}

#projects #project-bar svg {
  opacity: 0;
  width: 1.5rem;
  height: 1.5rem;
  padding: 2px;
  border-radius: 4px;
}

#projects #project-bar:hover svg {
  opacity: 1;
}

#projects #project-bar svg:hover {
  background-color: rgba(107, 114, 119, 1);
}

/****************** TASKS/CONTENT SECTION ******************/
#content {
  grid-column: 2;
  grid-row: 2 / 4;
}

.container {
  width: auto;
  height: 100%;
  padding: 3rem 10rem;
}

.heading .title {
  font-size: 2rem;
  font-weight: 600;
}

.heading .numTasks {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.numTasks svg {
  fill: #acacac;
}

.numTasks span {
  color: #acacac;
}

.tasks-container {
  padding-top: 2rem;
}

.task-item {
  width: 80%;
  padding-bottom: 0.5rem;
  display: flex;
  align-items: center;
  padding: 0.5rem;
  border-bottom: 1px solid #acacac;
  cursor: pointer;
}

.task-item:hover {
  background-color: #474d50;
  transition: 0.3s ease;
}

.task-checkbox {
  width: 1.1rem;
  height: 1.1rem;
  background-color: transparent;
  border: 2px solid white;
  border-radius: 50%;
}

.task-item-right {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.task-content {
  display: flex;
  flex-direction: column;
  padding-left: 1rem;
  /* margin-top: 1.25rem; */
}

.task-content .task-description {
  font-size: 0.8rem;
  color: #acacac;
}

.task-details {
  display: flex;
  align-items: center;
  gap: 1rem;
}

/****************** DIALOG ******************/
dialog {
  position: absolute;
  background-color: #242729;
  margin: auto;
  border: none;
  border-radius: 6px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  padding: 1rem;
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.5);
}

.form-container {
  width: 450px;
  height: auto;
  display: flex;
  flex-direction: column;
  /* gap: 0.5rem; */
}

.form-container input {
  background-color: #242729;
  padding: 0.25rem;
  border: none;
  outline: none;
}

.form-container input#title {
  font-size: 1.25rem;
  font-weight: 600;
}

.form-container input#description {
  padding-bottom: 1rem;
}

.form-container select {
  padding: 0.5rem 0.75rem;
  border-radius: 4px;
  border: 1px solid white;
  background-color: transparent;
  outline: none;

  color: white;
  font-weight: 600;
  cursor: pointer;
}

.form-container .buttons {
  display: flex;
  justify-content: flex-end;
  gap: 0.5rem;
}

button.cancel {
  padding: 0.5rem 0.75rem;
  border: none;
  border-radius: 4px;
  background-color: rgb(175, 175, 175);

  color: white;
  cursor: pointer;
  font-weight: 600;
}

button.add {
  padding: 0.5rem 0.75rem;
  border: none;
  border-radius: 4px;
  background-color: #307e7e;

  color: white;
  font-weight: 600;
  cursor: pointer;
}
/* dialog {
  margin: auto;
  border: none;
  border-radius: 8px;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  transform: scale(0.75);
  transition: 0.3s ease;
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.5);
}

dialog.open {
  transition: 0.3s ease;
  transform: scale(1);
  opacity: 1;
}

.form-container {
  width: 350px;
  height: 410px;
  padding: 2rem;

  display: flex;
  flex-direction: column;
  gap: 1rem;
} */

